added animations and compressed images

--- a/about.html
+++ b/about.html
@@ -37,6 +37,10 @@
   <meta name="theme-color" content="#FFB200">
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   <link rel="stylesheet" href="css/about.min.css" type="text/css">
+  <script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
   <title>Hale Metalice | Despre</title>
 </head>
 <body>
@@ -84,85 +88,85 @@
       </div>  
    <div class="main">
      <section class="main-section">
-       <div class="main-text changeOrder">
+       <div class="main-text changeOrder wow fadeIn" data-wow-delay="0.3s">
          <h1 class="main-title">Timpul construirii unui spatiu este un factor important in desfasurarea unei afaceri.</h1>
-         <div class="divider"></div>
+         <div class="divider divider-gold"></div>
          <p class="main-description">Profitati de timpii foarte redusi de montare a unei hale metalice in raport cu celelalte tipuri de constructii. Acest avantaj al executiei si montarii rapide nu trebuie facut in detrimentul sigurantei si al calitatii obiectivului.</p>
        </div>
-      <div class="main-text changeOrder">
+      <div class="main-text changeOrder wow fadeIn" data-wow-delay="0.4s">
         <h1 class="main-title">Un alt avantaj este reprezentat si de flexibilitatea constructiei.</h1>
-        <div class="divider"></div>
+        <div class="divider divider-gold"></div>
         <p class="main-description">Constructiile de tip hala sunt cele mai adaptate ritmului de dezvoltare actual. Halele cu structura metalica sau mixta au grad redus de dificultate in proiectare si executie.</p>
       </div>
     </section>
-     <section class="main-section">
-      <figure class="main-figure">
+     <section class="main-section wow fadeIn" data-wow-duration="1s">
+      <figure class="main-figure wow slideInLeft" data-wow-delay="0.3s">
         <img class="main-image" src="assets/img/igmoverlay.png" alt="">
       </figure>
-      <div class="main-text">
+      <div class="main-text wow slideInRight" data-wow-delay="0.3s">
         <h1 class="main-title">Suntem si vom fi in ajutorul vostru.</h1>
-        <div class="divider"></div>
+        <div class="divider divider-gold"></div>
         <p class="main-description">Societatea noastra a fost infiintata in anul 2011 si este specializata in constructii cu structura metalica (hale industriale cu sau fara panouri sandwich), sau alte tipuri de confectii metalice.</p>
       </div>
     </section>
     <div class="offers">
         <div class="offers-wrapper">
-          <h1 class="offers-title">Ce putem oferi</h1>
-          <div class="offers-box"> 
+          <h1 class="offers-title wow slideInDown">Ce putem oferi</h1>
+          <div class="offers-box wow fadeIn" data-wow-delay="0.1"> 
             <img src="assets/img/icons/calculator.png" alt="">
             <p>Evaluare de buget pentru investitii.</p>
           </div>
-          <div class="offers-box">
+          <div class="offers-box wow fadeIn" data-wow-delay="0.15">
             <img src="assets/img/icons/social-care.png" alt="">
             <p> Asistenta prompta in alegerea solutiei optime si dimensionarea materialului necesar pe tip de constructie.</p>
           </div>
-          <div class="offers-box">
+          <div class="offers-box wow fadeIn" data-wow-delay="0.2">
             <img src="assets/img/icons/idea.png" alt="">
             <p> Impreuna cu colaboratorii nostrii oferim proiectare infrastructura si suprastructura din metal si beton, reproiectare, optimizare proiecte.        </p>
           </div>
-          <div class="offers-box">
+          <div class="offers-box wow fadeIn" data-wow-delay="0.25">
             <img src="assets/img/icons/sketch.png" alt="">
             <p>Solutii si servicii diversificate, care sa vina in ajutorul echipelor de proiectare, garantand calitate si durabilitate proiectelor.</p>
           </div>
-          <div class="offers-box">
+          <div class="offers-box wow fadeIn" data-wow-delay="0.3">
             <img src="assets/img/icons/list.png" alt="">
             <p>Organizare de santier.</p>
           </div>
-          <div class="offers-box">
+          <div class="offers-box wow fadeIn" data-wow-delay="0.35">
             <img src="assets/img/icons/support.png" alt="">
             <p>Suport tehnic in toate fazele constructiei.</p>
           </div>
-          <div class="offers-box">
+          <div class="offers-box wow fadeIn" data-wow-delay="0.4">
             <img src="assets/img/icons/house-sketch.png" alt="">
             <p>Configurare hale metalice industriale, in baza proiectului de arhitectura.</p>
           </div>
-          <div class="offers-box">
+          <div class="offers-box wow fadeIn" data-wow-delay="0.45">
             <img src="assets/img/icons/piggy-bank.png" alt="">
             <p>Optimizare configuratie hale metalice, pentru reducerea costurilor.</p>
             <p>Amenajari incinte.</p>
           </div>
-          <div class="offers-box">
+          <div class="offers-box wow fadeIn" data-wow-delay="0.5">
             <img src="assets/img/icons/earthquake.png" alt="">
             <p>Lucrari de pregatire teren: decopertare, balastare si compactare.</p>
             <p>Lucrari de fundatii izolate.</p>
             <p>Lucrari de pardoseli industriale.</p>
           </div>
-          <div class="offers-box">
+          <div class="offers-box wow fadeIn" data-wow-delay="0.55">
             <img src="assets/img/icons/carhouse.png" alt="">
             <p>Transport matriale, pentru hala metalica, la locul santierului.</p>
             <p>Montaj structura metalica.</p>
             <p>Montaj acoperis/perete termoizolat si accesorii.</p>
           </div>  
-          <div class="offers-box">
+          <div class="offers-box wow fadeIn" data-wow-delay="0.6">
             <img src="assets/img/icons/molecules.png" alt="">
             <p>Fabricare structuri metalice.</p>
             <p>Lucrari de instalatii interioare si exterioare.</p>
           </div>
-          <div class="offers-box">
+          <div class="offers-box wow fadeIn" data-wow-delay="0.65">
             <img src="assets/img/icons/dance-floor.png" alt="">
             <p>Proiectare fundatii si adaptare la teren.</p>
           </div>
-          <div class="offers-box">
+          <div class="offers-box wow fadeIn" data-wow-delay="0.7">
             <img src="assets/img/icons/shopping-list.png" alt="">
             <p>Toata gama de lucrari necesara finalizarii si functionarii imobilului.        </p>
           </div>
@@ -197,30 +201,27 @@
        </div>
      </div>
    </div> -->
-  <footer class="main__footer">
+  <footer class="main__footer wow fadeIn">
   <div class="right">
       <div class="right-text">
         <div class="footer__info">Lasa-ne o parere!</div>
-        <span class="divider"></span>
       </div>
-      <form action="">
+      <form name="feedback" netlify>
         <input id="footer-name-input" type="text" placeholder="Numele tau" name="nume">
         <input id="footer-email-input" type="email" placeholder="Adresa ta de email" name="email">
         <textarea id="footer-textarea" name="descriere" cols="40" rows="6" placeholder="Parerea ta aici"></textarea>
-        <button class="button">Trimite</button>
+        <button class="btn btn-white">Trimite</button>
       </form>
     </div>
     <div class="left">
       <img class="footer__logo" src="assets/img/logo.png">
       <div class="footer-text">
         <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.</div>
-        <span class="divider"></span>
+        <span class="divider divider-gold divider-margin"></span>
       </div>
       <div class="footer__socials">
-        <img src="assets/img/socialicons/fb.png" alt="">
-        <img src="assets/img/socialicons/insta.png" alt="">
-        <img src="assets/img/socialicons/twitter.png" alt="">
-        <img src="assets/img/socialicons/whatsapp.png" alt="">
+        <a href="https://www.facebook.com/hale.metal1/" target="_blank"><img src="assets/img/socialicons/fb.png" alt=""></a>
+        <a href="https://api.whatsapp.com/send?phone=40752805775&text=Va%20contactez%20in%20legatura%20cu%20Milenium%20Metcons!" target="_blank"><img src="assets/img/socialicons/whatsapp.png" alt=""></a>
       </div>
     </div>
   </footer>
