--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
   <meta name="theme-color" content="#FFB200">
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   <link rel="stylesheet" href="css/index.min.css" type="text/css">
+  <!-- WOW JS -->
+  <script src="js/wow.min.js"></script>
+  <script>
+  new WOW().init();
+  </script>
   <title>Hale Metalice | Acasa</title>
 </head>
 <body>
   <div class="main">
-    <header class="navheader">
+    <header class="navheader wow fadeInDown" data-wow-delay="0.5s">
       <div class="inner-content">
         <div class="left">
           <a href="/"><img class="navheader__logo" src="assets/img/logo.png" alt="Hale Metalice, Milenium Metcons imagine reprezentativa, logo."></a>
@@ -85,7 +90,7 @@
     </div>
     <div class="main__box">
       <div class="main__content">
-        <div class="main__content-textbox">
+        <div class="main__content-textbox wow fadeIn" data-wow-delay="0.3s">
           <p class="main__content-subtitle">CALITATE SUPERIOARA</p>
           <h2 class="main__content-title">MILENIUM METCONS</h2>
           <p class="main__content-paragraph">MILENIUM METCONS este expertul, in confectii metalice, pe care va puteti baza oricand aveti nevoie de solutii metalice complete. Incercam sa dezvoltam permanent gama de servicii si produse pentru a veni in intampinarea necesitatilor dumneavoastra.</p>
@@ -95,21 +100,21 @@
     </div>
   </div>
   <div class="information-grid">
-    <div class="box">
+    <div class="box wow slideInLeft">
       <figure class="information-grid__figure">
         <img class="information-grid__image" src="assets/img/icons/handhouse.png" alt="hale metalice, Milenium Metcons imagine reprezentativa">
       </figure>
       <h3 class="information-grid__title">Consultanta & Garantii</h3>
       <p class="information-grid__description">Asistenta prompta in alegerea solutiei optime si dimensionarea materialului necesar pe tip de constructie, plus garantii si post-garantii.</p>
     </div>
-    <div class="box">
+    <div class="box wow fadeIn">
       <figure class="information-grid__figure">
         <img class="information-grid__image" src="assets/img/icons/truckgoods.png" alt="hale metalice, Milenium Metcons imagine reprezentativa">
       </figure> 
       <h3 class="information-grid__title">Montajul constructiei</h3>
       <p class="information-grid__description">Oferim montajul constructiei, avantajul nostru este echipa noastra, ce lucreaza eficient si rapid, colaborarea fiind cheia succesului nostru.</p>
     </div>
-    <div class="box">
+    <div class="box wow slideInRight">
       <figure class="information-grid__figure">
         <img class="information-grid__image" src="assets/img/icons/carhouse.png" alt="hale metalice, Milenium Metcons imagine reprezentativa.">
       </figure>
@@ -123,14 +128,14 @@
       <img class="about__image-pattern" alt="hale metalice, Milenium Metcons imagine, model." src="assets/img/patternline.png" />
     </figure>
     <div class="about__text">
-      <h2 class="about__title">Experienta noastra, ne face sa fim siguri ca ideea dvs. reprezinta urmatoarea noastra lucrare de succes!</h2>
+      <h2 class="about__title wow fadeIn" data-wow-delay="0.4s">Experienta noastra, ne face sa fim siguri ca ideea dvs. reprezinta urmatoarea noastra lucrare de succes!</h2>
       <span class="divider divider-black divider-margin"></span>
-      <p class="about__description">In cazul in care cautati o oferta serioasa, un partener serios si inovator pentru realizarea de cladiri pentru productie, cladiri de birouri, depozite, centre logistice, magazine, supermarketuri, showroom-uri, service-uri auto, ferme de animale, depozite frigorifice, sali de sport, apelati cu incredere si veti beneficia de tot concursul nostru.</p>
+      <p class="about__description wow fadeIn" data-wow-delay="0.45s">In cazul in care cautati o oferta serioasa, un partener serios si inovator pentru realizarea de cladiri pentru productie, cladiri de birouri, depozite, centre logistice, magazine, supermarketuri, showroom-uri, service-uri auto, ferme de animale, depozite frigorifice, sali de sport, apelati cu incredere si veti beneficia de tot concursul nostru.</p>
     </div>
   </div>
-  <div class="more-about" id="aflamaimulte">
+  <div class="more-about wow fadeIn" id="aflamaimulte">
     <div class="more-about-wrapper">
-      <div class="more-about__text">
+      <div class="more-about__text" >
         <h1 class="more-about__title title">Afla mai multe despre noi</h1>
         <span class="divider divider-black divider-margin"></span>
         <p class="more-about__description description">Confectionam hale metalice din <strong>europrofile sau teava patrata</strong>.</p>
@@ -145,7 +150,7 @@
   </div>
   <!-- <hr width="80%"  style="opacity: 0.4;"/> -->
   <div class="gallery">
-    <div class="gallery-wrapper">
+    <div class="gallery-wrapper wow fadeIn">
       <div class="gallery__text">
         <h1 class="gallery__title title">Galeria noastra</h1>
         <p class="gallery__description description">Mai jos, puteti vedea cateva imagini din galeria noastra.</p>
@@ -156,13 +161,13 @@
   </div>
   <div class="gallery__images">
     <figure class="gallery__figure">
-      <img src="assets/img/gallery/img16.jpg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
+      <img data-wow-delay="0.2s" class="wow fadeIn" src="assets/img/gallery/img16.jpg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
     </figure>
     <figure class="gallery__figure">
-      <img src="assets/img/gallery/img23.jpg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
+      <img data-wow-delay="0.25s" class="wow fadeIn" src="assets/img/gallery/img23.jpg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
     </figure>
     <figure class="gallery__figure">
-      <img src="assets/img/gallery/img24.jpg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
+      <img data-wow-delay="0.3s" class="wow fadeIn" src="assets/img/gallery/img24.jpg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
     </figure>
     <!-- <figure class="gallery__figure">
       <img src="assets/img/gallery/img16.jpg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
@@ -174,20 +179,20 @@
         <img src="assets/img/gallery/img16.jpg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
     </figure> -->
   </div>
-  <div class="contact">
+  <div class="contact wow fadeIn">
     <div class="contact-wrapper">
-      <h1 class="contact__title title">Contactati-ne!</h1>
+      <h1 class="contact__title title" data-wow-delay="0.4s">Contactati-ne!</h1>
       <span class="divider divider-black divider-margin"></span>
       <p class="contact__description description">Daca doriti ajutorul nostru pentru dezvolatarea proiectului dvs., folositi pagina de contact pentru a lua legatura cu noi. De asemenea, va atragem atentie asupra asa zisilor pseudo clienti care cer oferte cu toate ca nu vor construi niciodata nimic. Multi se intreaba: “Cat m-ar costa o hala de 10 m pe….6 sau…8 metri?” Acestia irosesc timpul care ar trebui dedicat celor care au un teren si chiar vor sa construiasca. Nu realizeaza ca, pentru o oferta cat mai completa, este nevoie de mult mai multe informatii. Exista de asemenea “meseriasi” care fac oferte de 20 - 25 euro/mp si induc in eroare potentialii clienti de buna-credinta facand sa creada ca se poate construi la acest pret. Avantajul construirii intr-un timp redus a acestor tipuri de constructii, nu este intotdeauna direct proportional cu costul . </p>
       <a href="/contact.html"><button class="btn btn-black">Contactati-ne</button></a>
     </div>
   </div>
-  <footer class="main__footer">
+  <footer class="main__footer wow fadeIn">
   <div class="right">
       <div class="right-text">
         <div class="footer__info">Lasa-ne o parere!</div>
       </div>
-      <form action="">
+      <form name="feedback" netlify>
         <input id="footer-name-input" type="text" placeholder="Numele tau" name="nume">
         <input id="footer-email-input" type="email" placeholder="Adresa ta de email" name="email">
         <textarea id="footer-textarea" name="descriere" cols="40" rows="6" placeholder="Parerea ta aici"></textarea>
@@ -201,10 +206,8 @@
         <span class="divider divider-gold divider-margin"></span>
       </div>
       <div class="footer__socials">
-        <img src="assets/img/socialicons/fb.png" alt="hale metalice, Milenium Metcons imagine">
-        <img src="assets/img/socialicons/insta.png" alt="hale metalice, Milenium Metcons imagine">
-        <img src="assets/img/socialicons/twitter.png" alt="hale metalice, Milenium Metcons imagine">
-        <img src="assets/img/socialicons/whatsapp.png" alt="hale metalice, Milenium Metcons imagine">
+        <a href="https://www.facebook.com/hale.metal1/" target="_blank"><img src="assets/img/socialicons/fb.png" alt=""></a>
+        <a href="https://api.whatsapp.com/send?phone=40752805775&text=Va%20contactez%20in%20legatura%20cu%20Milenium%20Metcons!" target="_blank"><img src="assets/img/socialicons/whatsapp.png" alt=""></a>
       </div>
     </div>
   </footer>
