--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,10 @@
   <meta name="theme-color" content="#FFB200">
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   <link rel="stylesheet" href="css/contact.min.css" type="text/css">
+  <script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
   <title>Hale Metalice | Despre</title>
 </head>
 <body>
@@ -82,8 +86,8 @@
       <div class="menu__element"><a href="/teava.html" >Teava</a></div>
       <div class="menu__element"><a href="/tuburi.html" >Tuburi</a></div>
     </div>  
-  <div class="main">
-    <div class="left">
+  <div class="main wow fadeIn" data-wow-delay="0.3s">
+    <div class="left wow slideInLeft" data-wow-delay="0.35s">
       <div class="main-text">
         <h1 class="main-title">Contacteaza-ne</h1>
         <div class="divider"></div>
@@ -111,8 +115,8 @@
         </div>
       </div>
     </div>
-    <div class="right">
-      <form id="contact" action="">
+    <div class="right wow slideInRight">
+      <form id="contact" name="contact" netlify>
         <input class="contact-input" type="text" name="name" placeholder="Nume" required>
         <input class="contact-input" type="email" name="email" placeholder="Email" required>
         <input class="contact-input" type="text" name="subiect" placeholder="Subiect" required>
@@ -121,32 +125,28 @@
       </form>
     </div>
   </div>
-  <footer class="main__footer">
+  <footer class="main__footer wow fadeIn">
   <div class="right">
       <div class="right-text">
         <div class="footer__info">Lasa-ne o parere!</div>
-        <span class="divider"></span>
       </div>
-      <form action="">
+      <form name="feedback" netlify>
         <input id="footer-name-input" type="text" placeholder="Numele tau" name="nume">
         <input id="footer-email-input" type="email" placeholder="Adresa ta de email" name="email">
         <textarea id="footer-textarea" name="descriere" cols="40" rows="6" placeholder="Parerea ta aici"></textarea>
-        <button class="button">Trimite</button>
+        <button class="btn btn-white">Trimite</button>
       </form>
     </div>
     <div class="left">
       <img class="footer__logo" src="assets/img/logo.png">
       <div class="footer-text">
         <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.</div>
-        <span class="divider"></span>
+        <span class="divider divider-gold divider-margin"></span>
       </div>
       <div class="footer__socials">
-        <img src="assets/img/socialicons/fb.png" alt="">
-        <img src="assets/img/socialicons/insta.png" alt="">
-        <img src="assets/img/socialicons/twitter.png" alt="">
-        <img src="assets/img/socialicons/whatsapp.png" alt="">
+        <a href="https://www.facebook.com/hale.metal1/" target="_blank"><img src="assets/img/socialicons/fb.png" alt=""></a>
+        <a href="https://api.whatsapp.com/send?phone=40752805775&text=Va%20contactez%20in%20legatura%20cu%20Milenium%20Metcons!" target="_blank"><img src="assets/img/socialicons/whatsapp.png" alt=""></a>
       </div>
-    </div>
   </footer>
   <script src="js/menu-burger.js"></script>
 </body>
