--- a/teava.html
+++ b/teava.html
@@ -37,6 +37,10 @@
   <meta name="theme-color" content="#FFB200">  
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   <link rel="stylesheet" href="css/teava.min.css" type="text/css">
+  <script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
   <title>Hale Metalice | Despre</title>
 </head>
 <body>
@@ -83,7 +87,7 @@
       <div class="menu__element"><a href="/tuburi.html" >Tuburi</a></div>
     </div>  
   <div class="main">
-    <div class="main-wrapper">
+    <div class="main-wrapper wow fadeIn" data-wow-delay="0.3s">
       <div class="left">
         <div class="main-text">
           <h2 class="main-subtitle">Cracteristici</h2>
@@ -102,7 +106,7 @@
         <img src="assets/img/teavasudata.jpeg" alt="" class="main-img">
       </div>
     </div>
-      <div class="dimensions">
+      <div class="dimensions wow fadeIn" data-wow-delay="0.45s">
         <h1 class="main-title smaller">Dimensiuni disponibile (dimatreu x grosime)</h1>
         <div class="dimensions-wrapper">
           <div class="tags">
@@ -129,7 +133,7 @@
     </div>
   </div>
 <div class="main" id="teavatrasa">
-  <div class="main-wrapper">
+  <div class="main-wrapper wow fadeIn" data-wow-delay="0.3s">
     <div class="left">
       <div class="main-text">
         <h2 class="main-subtitle">Cracteristici</h2>
@@ -144,7 +148,7 @@
       <img src="assets/img/teavatrasa.jpeg" alt="" class="main-img">
     </div>
   </div>
-    <div class="more-info" id="readmore">
+    <div class="more-info wow fadeIn" id="readmore" data-wow-delay="0.3s">
       <h1 class="main-title">De asemenea...</h1>
       <div class="more-info-wrapper">
         <p class="more-info-description">Teava din otel fara sudura poate fi, uneori, mai scumpa decat alte forme de teava din otel, dar este, de asemenea, <strong>mult mai fiabila</strong>. De obicei tevile cedeaza in punctul de sudura, dar pentru ca teava trasa nu are un astfel de punct, nu este supusa acestei defectiuni.</p>
@@ -153,7 +157,7 @@
         <p class="more-info-description"><strong>In plus, societatea naostra ofera transport gratuit.</strong></p>
       </div>
     </div>
-    <div class="dimensions">
+    <div class="dimensions wow fadeIn" data-wow-delay="0.45s">
         <h1 class="main-title smaller">Dimensiuni disponibile (dimatreu x grosime)</h1>
         <div class="dimensions-wrapper">
           <div class="tags">
@@ -192,13 +196,12 @@
       <a href="/contact.html"><button class="btn btn-white">Contacteaza-ne</button></a>
     </div>
   </div>
-  <footer class="main__footer">
+  <footer class="main__footer wow fadeIn">
   <div class="right">
       <div class="right-text">
         <div class="footer__info">Lasa-ne o parere!</div>
-        <span class="divider"></span>
       </div>
-      <form action="">
+      <form name="feedback" netlify>
         <input id="footer-name-input" type="text" placeholder="Numele tau" name="nume">
         <input id="footer-email-input" type="email" placeholder="Adresa ta de email" name="email">
         <textarea id="footer-textarea" name="descriere" cols="40" rows="6" placeholder="Parerea ta aici"></textarea>
@@ -209,13 +212,11 @@
       <img class="footer__logo" src="assets/img/logo.png">
       <div class="footer-text">
         <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.</div>
-        <span class="divider"></span>
+        <span class="divider divider-gold divider-margin"></span>
       </div>
       <div class="footer__socials">
-        <img src="assets/img/socialicons/fb.png" alt="">
-        <img src="assets/img/socialicons/insta.png" alt="">
-        <img src="assets/img/socialicons/twitter.png" alt="">
-        <img src="assets/img/socialicons/whatsapp.png" alt="">
+        <a href="https://www.facebook.com/hale.metal1/" target="_blank"><img src="assets/img/socialicons/fb.png" alt=""></a>
+        <a href="https://api.whatsapp.com/send?phone=40752805775&text=Va%20contactez%20in%20legatura%20cu%20Milenium%20Metcons!" target="_blank"><img src="assets/img/socialicons/whatsapp.png" alt=""></a>
       </div>
     </div>
   </footer>
