--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
     </section>
      <section class="main-section wow fadeIn" data-wow-duration="1s">
       <figure class="main-figure wow slideInLeft" data-wow-delay="0.3s">
-        <img class="main-image" src="assets/img/igmoverlay.png" alt="">
+        <img class="main-image" src="assets/img/aboutaniversary.png" alt="">
       </figure>
       <div class="main-text wow slideInRight" data-wow-delay="0.3s">
         <h1 class="main-title">Suntem si vom fi in ajutorul vostru.</h1>
