--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
         <p class="more-about__description description">• Aceasta este cheia succesului nostru. Fie ca aveti nevoie de o hala cu destinatie de spatiu comercial sau industrial, fie pentru agricultura, va putem oferi o solutie durabila si potrivita cu fondurile de care dispuneti - hale metalice la cheie. Livram/executam structuri sau sisteme complete de hale cu structura metalica usoara, din teava patrata sau europrofile, care asigura <strong>functionalitate, flexibilitate si valoare</strong>. Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs.</p>
             
         <p class="more-about__description description">• Societatea noastra mai comerciaza si teava rotunda trasa sau sudata longitudinal sau elicodial. De la DN-108 pana la DN-1220, iar toate produsele sunt noi.</p>
+      <!-- Start of CuterCounter Code -->
+<a href="http://www.cutercounter.com/" target="_blank"><img src="http://www.cutercounter.com/hit.php?id=19094&nd=6&style=34" border="0" alt="web counter"></a>
+<!-- End of CuterCounter Code -->
       </div>
     </div>
   </div>
