--- a/index.html
+++ b/index.html
@@ -192,9 +192,6 @@
       <div class="right-text">
         <div class="footer__info">Lasa-ne o parere!</div>
       </div>
-     <!-- Start of CuterCounter Code -->
-<a href="http://www.cutercounter.com/" target="_blank"><img src="http://www.cutercounter.com/hit.php?id=19094&nd=6&style=34" border="0" alt="web counter"></a>
-<!-- End of CuterCounter Code -->
     <form name="feedback" netlify>
         <input id="footer-name-input" type="text" placeholder="Numele tau" name="nume">
         <input id="footer-email-input" type="email" placeholder="Adresa ta de email" name="email">
@@ -207,6 +204,9 @@
       <div class="footer-text">
         <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.</div>
         <span class="divider divider-gold divider-margin"></span>
+    <!-- Start of CuterCounter Code -->
+<a href="http://www.cutercounter.com/" target="_blank"><img src="http://www.cutercounter.com/hit.php?id=19096&nd=6&style=52" border="0" alt="hit counter"></a>
+<!-- End of CuterCounter Code -->
       </div>
       <div class="footer__socials">
         <a href="https://www.facebook.com/hale.metal1/" target="_blank"><img src="assets/img/socialicons/fb.png" alt=""></a>
