--- a/index.html
+++ b/index.html
@@ -204,13 +204,13 @@
       <div class="footer-text">
         <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.</div>
         <span class="divider divider-gold divider-margin"></span>
-    <!-- Start of CuterCounter Code -->
-<a href="http://www.cutercounter.com/" target="_blank"><img src="http://www.cutercounter.com/hit.php?id=19096&nd=6&style=52" border="0" alt="hit counter"></a>
-<!-- End of CuterCounter Code -->
       </div>
       <div class="footer__socials">
         <a href="https://www.facebook.com/hale.metal1/" target="_blank"><img src="assets/img/socialicons/fb.png" alt=""></a>
         <a href="https://api.whatsapp.com/send?phone=40752805775&text=Va%20contactez%20in%20legatura%20cu%20Milenium%20Metcons!" target="_blank"><img src="assets/img/socialicons/whatsapp.png" alt=""></a>
+     <!-- Start of CuterCounter Code -->
+<a href="mileniummetcons.com" target="_blank"><img src="http://www.cutercounter.com/hit.php?id=19096&nd=6&style=52" border="0" alt="hit counter"></a>
+<!-- End of CuterCounter Code -->
       </div>
     </div>
   </footer>
