--- a/index.html
+++ b/index.html
@@ -193,14 +193,15 @@
         <div class="footer__info">Lasa-ne o parere!</div>
       </div>
     <form name="feedback" netlify>
-        <input id="footer-name-input" type="text" placeholder="Numele tau" name="nume">
-        <input id="footer-email-input" type="email" placeholder="Adresa ta de email" name="email">
-        <textarea id="footer-textarea" name="descriere" cols="40" rows="6" placeholder="Parerea ta aici"></textarea>
+        <input id="footer-name-input" type="text" placeholder="Numele tau" name="nume" required>
+        <input id="footer-email-input" type="email" placeholder="Adresa ta de email" name="email" required>
+        <textarea id="footer-textarea" name="descriere" cols="40" rows="6" placeholder="Parerea ta aici" required></textarea>
         <button class="btn btn-white">Trimite</button>
-      </form>
+    </form>
     </div>
     <div class="left">
       <img class="footer__logo" src="assets/img/logo.png">
+      <a href="mileniummetcons.com" style="display:block;" target="_blank"><img src="http://www.cutercounter.com/hit.php?id=19096&nd=6&style=52" border="0" alt="hit counter"></a>
       <div class="footer-text">
         <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.</div>
         <span class="divider divider-gold divider-margin"></span>
@@ -208,9 +209,6 @@
       <div class="footer__socials">
         <a href="https://www.facebook.com/hale.metal1/" target="_blank"><img src="assets/img/socialicons/fb.png" alt=""></a>
         <a href="https://api.whatsapp.com/send?phone=40752805775&text=Va%20contactez%20in%20legatura%20cu%20Milenium%20Metcons!" target="_blank"><img src="assets/img/socialicons/whatsapp.png" alt=""></a>
-     <!-- Start of CuterCounter Code -->
-<a href="mileniummetcons.com" target="_blank"><img src="http://www.cutercounter.com/hit.php?id=19096&nd=6&style=52" border="0" alt="hit counter"></a>
-<!-- End of CuterCounter Code -->
       </div>
     </div>
   </footer>
