deleted index contact text

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="contact-wrapper">
       <h1 class="contact__title title" data-wow-delay="0.4s">Contactati-ne!</h1>
       <span class="divider divider-black divider-margin"></span>
-      <p class="contact__description description">Daca doriti ajutorul nostru pentru dezvolatarea proiectului dvs., folositi pagina de contact pentru a lua legatura cu noi. De asemenea, va atragem atentie asupra asa zisilor pseudo clienti care cer oferte cu toate ca nu vor construi niciodata nimic. Multi se intreaba: “Cat m-ar costa o hala de 10 m pe….6 sau…8 metri?” Acestia irosesc timpul care ar trebui dedicat celor care au un teren si chiar vor sa construiasca. Nu realizeaza ca, pentru o oferta cat mai completa, este nevoie de mult mai multe informatii. Exista de asemenea “meseriasi” care fac oferte de 20 - 25 euro/mp si induc in eroare potentialii clienti de buna-credinta facand sa creada ca se poate construi la acest pret. Avantajul construirii intr-un timp redus a acestor tipuri de constructii, nu este intotdeauna direct proportional cu costul . </p>
+      <p class="contact__description description">Daca doriti ajutorul nostru pentru dezvolatarea proiectului dvs., folositi pagina de contact pentru a lua legatura cu noi.</p>
       <a href="/contact.html"><button class="btn btn-black">Contactati-ne</button></a>
     </div>
   </div>
