--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="contact-wrapper">
       <h1 class="contact__title title" data-wow-delay="0.4s">Contactati-ne!</h1>
       <span class="divider divider-black divider-margin"></span>
-      <p class="contact__description description">Daca doriti ajutorul nostru pentru dezvolatarea proiectului dvs., folositi pagina de contact pentru a lua legatura cu noi.</p>
+      <!-- <p class="contact__description description"></p> -->
       <a href="/contact.html"><button class="btn btn-black">Contactati-ne</button></a>
     </div>
   </div>
