--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     </div>
     <div class="left">
       <img class="footer__logo" src="assets/img/logo.png">
-      <a href="http://www.cutercounter.com/" style="display: block;" target="_blank"><img src="https://tinyurl.com/yaxuffev" border="0" alt="visitor counter"></a>
+<a href="http://www.mileniummetcons.com/" target="_blank"><img src="http://www.cutercounter.com/hit.php?id=19124&nd=6&style=52" border="0" alt="free counter"></a>
       <div class="footer-text">
         <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.</div>
         <span class="divider divider-gold divider-margin"></span>
