added open graph

--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
   <meta property="fb:app_id" content="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" /> 
   <meta property="og:title" content="Hale Metalice | Despre" />
   <meta property="og:type" content="business.business" />
-  <meta property="og:url" content="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" />
-  <meta property="og:image" content="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" />
+  <meta property="og:url" content="https://www.mileniummetcons.com/" />
+  <meta property="og:image" content="assets/img/facebook.png" />
   <!-- Link -->
-  <link rel="canonical" href="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX">
+  <link rel="canonical" href="https://www.mileniummetcons.com/">
   <!-- favicon -->
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
