--- a/gallery.html
+++ b/gallery.html
@@ -11,12 +11,12 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="orange">
   <!-- Open Graph -->
   <meta property="fb:app_id" content="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" /> 
-  <meta property="og:title" content="Hale Metalice | Despre" />
+  <meta property="og:title" content="Hale Metalice | Galerie" />
   <meta property="og:type" content="business.business" />
-  <meta property="og:url" content="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" />
-  <meta property="og:image" content="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" />
+  <meta property="og:url" content="https://www.mileniummetcons.com/" />
+  <meta property="og:image" content="assets/img/facebook.png" />
   <!-- Link -->
-  <link rel="canonical" href="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX">
+  <link rel="canonical" href="https://www.mileniummetcons.com/">
   <!-- favicon -->
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
@@ -41,7 +41,7 @@
   <script>
     new WOW().init();
   </script>
-  <title>Hale Metalice | Despre</title>
+  <title>Hale Metalice | Galerie</title>
 </head>
 <body>
   <header class="navheader">
