--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="orange">
   <!-- Open Graph -->
-  <meta property="fb:app_id" content="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" /> 
+  <meta property="fb:app_id" content="386859795173696" /> 
   <meta property="og:title" content="Hale Metalice | Acasa" />
   <meta property="og:type" content="business.business" />
-  <meta property="og:url" content="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" />
-  <meta property="og:image" content="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" />
+  <meta property="og:url" content="https://www.mileniummetcons.com/" />
+  <meta property="og:image" content="assets/img/facebook.png" />
   <!-- Link -->
-  <link rel="canonical" href="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX">
+  <link rel="canonical" href="https://www.mileniummetcons.com/">
   <!-- favicon -->
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
@@ -41,6 +41,27 @@
   <script src="js/wow.min.js"></script>
   <script>
   new WOW().init();
+  </script>
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '386859795173696',
+        cookie     : true,
+        xfbml      : true,
+        version    : 'v3.1'
+      });
+        
+      FB.AppEvents.logPageView();   
+        
+    };
+  
+    (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "https://connect.facebook.net/en_US/sdk.js";
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
   </script>
   <title>Hale Metalice | Acasa</title>
 </head>
