--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
     <div class="left">
       <img class="footer__logo" src="assets/img/logo.png">
-      <a href="http://www.cutercounter.com/" style="display: block;" target="_blank"><img src="https://tinyurl.com/yaxuffev" border="0" alt="visitor counter"></a>
+      <img src="https://tinyurl.com/yaxuffev" border="0" alt="visitor counter">
       <div class="footer-text">
         <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.</div>
         <span class="divider divider-gold divider-margin"></span>
