fixed counter and again open graph

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="orange">
   <!-- Open Graph -->
-  <meta property="fb:app_id" content="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" /> 
+  <meta property="fb:app_id" content="386859795173696" /> 
   <meta property="og:title" content="Milenium Metcons | Contact" />
+  <meta property="og:description" content="Confectionam hale metalice din europrofile sau teava patrata.Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs." />
   <meta property="og:type" content="business.business" />
   <meta property="og:url" content="https://www.mileniummetcons.com/" />
   <meta property="og:image" content="assets/img/facebook.png" />
