--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- Open Graph -->
   <meta property="fb:app_id" content="386859795173696" /> 
   <meta property="og:title" content="Hale Metalice | Acasa" />
+  <meta property="og:description" content="Confectionam hale metalice din europrofile sau teava patrata.Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs." />
   <meta property="og:type" content="business.business" />
   <meta property="og:url" content="https://www.mileniummetcons.com/" />
   <meta property="og:image" content="assets/img/facebook.png" />
