--- a/index.html
+++ b/index.html
@@ -223,10 +223,7 @@
     </div>
     <div class="left">
       <img class="footer__logo" src="assets/img/logo.png">
-<<<<<<< HEAD
-      <img src="https://tinyurl.com/yaxuffev" border="0" alt="visitor counter">
-=======
->>>>>>> 050f6024f25da5f2ce410ed9161a8499703cc41b
+      <img src="http://www.cutercounter.com/hit.php?id=19120&nd=6&style=52" style="display:block;" border="0" alt="visitor counter">
       <div class="footer-text">
         <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.</div>
         <span class="divider divider-gold divider-margin"></span>
