change index title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="orange">
   <!-- Open Graph -->
   <meta property="fb:app_id" content="386859795173696" /> 
-  <meta property="og:title" content="Hale Metalice | Acasa" />
+  <meta property="og:title" content="Milenium Metcons | Acasa" />
   <meta property="og:description" content="Confectionam hale metalice din europrofile sau teava patrata.Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs." />
   <meta property="og:type" content="business.business" />
   <meta property="og:url" content="https://www.mileniummetcons.com/" />
